<resources>
    <string name="app_name">OnlineExamination</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome %1$s!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">Logo</string>
    <string name="home">Home</string>
    <string name="exams">Exams</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="overview">Overview</string>
    <string name="manage">Manage</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="info">Info</string>
    <string name="communicate">Communicate</string>
    <string name="rate">Rate us</string>
    <string name="share">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

</resources>