<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home"
            />

    <item android:title="@string/exams">
        <menu>
            <item
                    android:id="@+id/nav_overview"
                    android:title="@string/overview"
                    android:icon="@drawable/home"/>
            <item
                    android:id="@+id/nav_manage"
                    android:title="@string/manage"
                    android:icon="@drawable/home"/>

        </menu>
            </item>
    <item android:title="@string/profile">
        <menu>
            <item
                    android:id="@+id/nav_info"
                    android:title="@string/info"
                    android:icon="@drawable/home"/>
            <item
                    android:id="@+id/nav_logout"
                    android:title="@string/logout"
                    android:icon="@drawable/home"/>
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                    android:id="@+id/nav_share"
                    android:title="@string/share"
                    android:icon="@drawable/home"/>
            <item
                    android:id="@+id/nav_rate"
                    android:title="@string/rate"
                    android:icon="@drawable/home"/>
        </menu>
    </item>
</menu>