<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">


        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:id="@+id/tv_id_textview"
                    android:text="@string/app_name"
                    android:textSize="26sp">
            </TextView>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name">
            </TextView>
        </LinearLayout>

        <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignEnd="@id/btn_delete"
                android:layout_marginEnd="80dp"
                android:id="@+id/btn_edit"
                android:text="@string/plus"
                android:textSize="15sp"
                style="?android:attr/buttonBarButtonStyle">
        </Button>

        <Button
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30dp"
                android:id="@+id/btn_delete"
                android:text="@string/minus"
                android:textSize="15sp"
                style="?android:attr/buttonBarButtonStyle">
        </Button>
    </RelativeLayout>



</LinearLayout>